--- a/src/UWP/App.xaml
+++ b/src/UWP/App.xaml
@@ -1,10 +1,10 @@
-﻿<Application
+﻿<views:MvxApplication
     x:Class="OSDPBenchUWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:OSDPBenchUWP">
+    xmlns:views="using:MvvmCross.Platforms.Uap.Views">
 
     <Application.Resources>
-        <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+
     </Application.Resources>
-</Application>
+</views:MvxApplication>
