--- a/src/UWP/Views/MainView.xaml
+++ b/src/UWP/Views/MainView.xaml
@@ -60,21 +60,50 @@
                 FontSize="24"
                 Margin="20 80 20 10"
                 HorizontalAlignment="Center"
+                IsEnabled ="{Binding IsReadyToConnect}"
                 Command="{Binding AttemptConnectCommand}" Content="Attempt to Connect"/>
             <TextBlock 
                 FontSize="20"
                 Margin="20 10 20 10"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Stretch"
+                TextAlignment="Center"
                 MaxWidth="300"
+                TextWrapping="Wrap"
                 Text="{Binding StatusText}"/>
         </StackPanel>
         <Rectangle 
             Grid.Column="1"
-            VerticalAlignment="Stretch" 
+            VerticalAlignment="Center" 
             Width="2" Margin="0 20" Stroke="Black" />
         <StackPanel Grid.Column="2">
-
+            <TextBlock
+                FontSize="32"
+                Margin="20 10 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="Device Information"/>
+            <TextBlock
+                FontSize="24"
+                Margin="20 10 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="{Binding IdentityLookup.VendorName}"/>
+            <TextBlock
+                FontSize="20"
+                Margin="20 0 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="{Binding IdentityLookup.Model}"/>
+            <TextBlock
+                FontSize="20"
+                Margin="20 0 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="{Binding IdentityLookup.VersionNumber}"/>
         </StackPanel>
     </Grid>
 </views:MvxWindowsPage>
