--- a/src/UWP/Views/MainView.xaml
+++ b/src/UWP/Views/MainView.xaml
@@ -27,9 +27,9 @@
             <TextBlock FontSize="32" Margin="20 10 20 0" Text="Serial Port" />
             <ComboBox 
                 FontSize="24"
-                Margin="20 10 20 10" MinWidth="300" 
+                Margin="20 10 20 10" MinWidth="300" MaxWidth="300" 
                 IsEnabled="{Binding IsDiscovering, Mode=OneWay, Converter={StaticResource BoolInverter}}"
-                ItemsSource="{Binding AvailableSerialPorts}"
+                ItemsSource="{Binding AvailableSerialPorts, Mode=TwoWay}"
                 DisplayMemberPath="Description"
                 SelectedItem="{Binding SelectedSerialPort, Mode=TwoWay}"/>
             <TextBlock FontSize="32" Margin="20 10 20 0" Text="Baud Rate" />
@@ -44,7 +44,7 @@
                 </CheckBox>-->
                 <ComboBox 
                     FontSize="24"
-                    Margin="20 10 20 10" MinWidth="300" 
+                    Margin="20 10 20 10" MinWidth="300" MaxWidth="300"
                     IsEnabled="{Binding IsDiscovering, Mode=OneWay, Converter={StaticResource BoolInverter}}"
                     ItemsSource="{Binding AvailableBaudRates}"
                     SelectedItem="{Binding SelectedBaudRate, Mode=TwoWay}" />
@@ -53,13 +53,14 @@
             <controls:NumberBox 
                 FontSize="24"
                 Value="{Binding Address, Mode=TwoWay}"
-                Margin="20 10 20 10" MaxWidth="300" 
+                Margin="20 10 20 10" MaxWidth="150" 
                 IsEnabled="{Binding IsDiscovering, Mode=OneWay, Converter={StaticResource BoolInverter}}"
                 HorizontalAlignment="Left"
                 SmallChange="1"
                 Minimum="0"
                 Maximum="255"
-                SpinButtonPlacementMode="Inline"/>
+                SpinButtonPlacementMode="Inline"
+                AcceptsExpression="False"/>
             <CheckBox 
                     Margin="20 10 20 0"
                     IsChecked="{Binding RequireSecureChannel, Mode=TwoWay}">
