--- a/src/UWP/Views/MainView.xaml
+++ b/src/UWP/Views/MainView.xaml
@@ -99,8 +99,10 @@
         <Rectangle 
             Grid.Column="1"
             VerticalAlignment="Stretch"
-            Width="2" Margin="0 20" Stroke="{ThemeResource DefaultTextForegroundThemeBrush}" />
-        <StackPanel Grid.Column="2">
+            Width="2" Margin="0 20" 
+            Stroke="{ThemeResource DefaultTextForegroundThemeBrush}"/>
+        <StackPanel Grid.Column="2"
+                    Visibility="{Binding IsDiscovered, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
             <TextBlock
                 FontSize="32"
                 Margin="20 10 20 0"
@@ -175,7 +177,8 @@
                         Margin="20 10 20 10"
                         FontSize="16"
                         HorizontalAlignment="Center"
-                        Content="Update"/>
+                        Content="Update"
+                        Command="{Binding UpdateCommunicationCommand, Mode=OneWay}"/>
 
                 <FontIcon Grid.Row="2" Grid.Column="0" 
                           FontFamily="Segoe MDL2 Assets" 
