--- a/src/UWP/App.xaml
+++ b/src/UWP/App.xaml
@@ -1,10 +1,10 @@
-﻿<views:MvxApplication
+﻿<osdpBenchUwp:OsdpBenchApp
     x:Class="OSDPBenchUWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:views="using:MvvmCross.Platforms.Uap.Views">
+    xmlns:osdpBenchUwp="using:OSDPBenchUWP">
 
     <Application.Resources>
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
     </Application.Resources>
-</views:MvxApplication>
+</osdpBenchUwp:OsdpBenchApp>
