--- a/src/OSDP-Bench-WinUI/OSDP-Bench-WinUI/Views/RootView.xaml
+++ b/src/OSDP-Bench-WinUI/OSDP-Bench-WinUI/Views/RootView.xaml
@@ -1,12 +1,12 @@
-﻿<views:RootViewPage
-    x:Class="OSDPBenchWinUI.Views.RootView"
+﻿<views:MvxWindowsPage
+    x:Class="OSDP_Bench_WinUI.Views.RootView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:views="using:OSDPBenchWinUI.Views"
     xmlns:converters="using:OSDP_Bench_WinUI.Converters"
     xmlns:converters1="using:CommunityToolkit.WinUI.UI.Converters"
+    xmlns:views="using:MvvmCross.Platforms.WinUi.Views"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -233,4 +233,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</views:RootViewPage>
+</views:MvxWindowsPage>
