--- a/src/OSDP-Bench-Android/Resources/layout/SplashScreen.xml
+++ b/src/OSDP-Bench-Android/Resources/layout/SplashScreen.xml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/colorAccent">
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Loading...."
-            android:gravity="center" />
-</LinearLayout>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/ic_launcher_background">
+    <ImageView 
+	    android:src="@mipmap/ic_launcher"
+	    android:layout_width="100dp"
+	    android:layout_height="100dp"
+	    android:layout_centerInParent="true"
+	    android:scaleType="centerCrop" />
+</RelativeLayout>
