--- a/src/OSDP-Bench-WinUI/OSDP-Bench-WinUI/Views/UpdateCommunicationView.xaml
+++ b/src/OSDP-Bench-WinUI/OSDP-Bench-WinUI/Views/UpdateCommunicationView.xaml
@@ -1,4 +1,5 @@
-﻿<views:MvxWindowsPage
+﻿<!-- ReSharper disable Xaml.ConstructorWarning -->
+<views:MvxWindowsPage
     x:Class="OSDP_Bench_WinUI.Views.UpdateCommunicationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +7,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="using:MvvmCross.Platforms.WinUi.Views"
     xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
+    xmlns:viewModels="using:OSDPBench.Core.ViewModels"
     mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=viewModels:UpdateCommunicationViewModel, IsDesignTimeCreatable=False}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
@@ -59,3 +62,4 @@
         </StackPanel>
     </Grid>
 </views:MvxWindowsPage>
+<!-- ReSharper restore Xaml.ConstructorWarning -->
