--- a/src/UI/WinUI/App.xaml
+++ b/src/UI/WinUI/App.xaml
@@ -1,5 +1,5 @@
 ﻿<views:MvxApplication 
-    x:Class="OSDP_Bench_WinUI.App"
+    x:Class="WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:views="using:MvvmCross.Platforms.WinUi.Views"
