--- a/src/UI/WinUI/Views/RootView.xaml
+++ b/src/UI/WinUI/Views/RootView.xaml
@@ -1,12 +1,12 @@
 ﻿<!-- ReSharper disable Xaml.ConstructorWarning -->
 <views:MvxWindowsPage
-    x:Class="OSDP_Bench_WinUI.Views.RootView"
+    x:Class="WinUI.Views.RootView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="using:OSDP_Bench_WinUI.Converters"
-    xmlns:converters1="using:CommunityToolkit.WinUI.UI.Converters"
+    xmlns:localConverters="using:WinUI.Converters"
+    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     xmlns:views="using:MvvmCross.Platforms.WinUi.Views"
     xmlns:viewModels="using:OSDPBench.Core.ViewModels"
     mc:Ignorable="d"
@@ -15,10 +15,10 @@
 
     <Page.Resources>
         <ResourceDictionary>
-            <converters1:BoolNegationConverter x:Name="BoolInverter" />
-            <converters1:BoolToVisibilityConverter TrueValue="Visible" FalseValue="Collapsed" x:Key="BoolToVisibilityConverter" />
-            <converters1:BoolToObjectConverter x:Name="BoolToIcon" TrueValue="&#xF13E;" FalseValue="&#xF13D;" />
-            <converters:StatusLevelConverter x:Name="StatusLevelConverter" />
+            <converters:BoolNegationConverter x:Name="BoolInverter" />
+            <converters:BoolToVisibilityConverter TrueValue="Visible" FalseValue="Collapsed" x:Key="BoolToVisibilityConverter" />
+            <converters:BoolToObjectConverter x:Name="BoolToIcon" TrueValue="&#xF13E;" FalseValue="&#xF13D;" />
+            <localConverters:StatusLevelConverter x:Name="StatusLevelConverter" />
         </ResourceDictionary>
     </Page.Resources>
 
