--- a/src/UI/WinUI/Views/UpdateCommunicationView.xaml
+++ b/src/UI/WinUI/Views/UpdateCommunicationView.xaml
@@ -1,6 +1,6 @@
 ﻿<!-- ReSharper disable Xaml.ConstructorWarning -->
 <views:MvxWindowsPage
-    x:Class="OSDP_Bench_WinUI.Views.UpdateCommunicationView"
+    x:Class="WinUI.Views.UpdateCommunicationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
