--- a/src/OSDP-Bench-Android/Resources/layout/RootView.axml
+++ b/src/OSDP-Bench-Android/Resources/layout/RootView.axml
@@ -112,7 +112,7 @@
 	            android:paddingRight="50dp"
 	            android:layout_gravity="center_horizontal"
 	            android:text="Set communication"
-	            local:MvxBind="Click UpdateCommunicationCommand" />
+	            local:MvxBind="Click UpdateCommunicationCommand; Enabled IsConnected" />
             <Button
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
@@ -120,7 +120,7 @@
 	            android:paddingRight="50dp"
 	            android:layout_gravity="center_horizontal"
 	            android:text="Reset"
-	            local:MvxBind="Click ResetDeviceCommand" />
+	            local:MvxBind="Click ResetDeviceCommand; Enabled IsConnected" />
         </LinearLayout>
 	</ScrollView>
 
@@ -137,7 +137,7 @@
             android:padding="5dp"
 			android:textColor="#FFFFFF"
 			android:background="@android:color/darker_gray"
-            local:MvxBind="Text Format('Address {0} - {1}', Address, StatusText)" />
+            local:MvxBind="Text Format('Baud Rate {0} Address {1} - {2}', SelectedBaudRate, Address, StatusText)" />
 	</LinearLayout>
 
 </LinearLayout>
